# lame2D

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  hello_window.cpp  snake.cpp  top_down_movement.cpp
include/: color.hpp  event.hpp  rectangle.hpp  vector2.hpp  window.hpp
src/: color.cpp  rectangle.cpp  vector2.cpp  window.cpp
